--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@eslint/js": "^9.10.0",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.6"
   }
